# sake-coordinator

./: .env.example  README.md  compose.yaml  setup_dynamodb.sh  test_api.sh  test_api_crud.sh  test_dynamodb_schema.sh  test_gsi_queries.sh  test_production.sh  test_simple.sh
.github/workflows/: deploy-agentcore.yml  deploy.yml
.kiro/specs/dynamic-category-generation/: design.md  requirements.md  tasks.md
.kiro/specs/dynamodb-schema-alignment/: design.md  requirements.md  tasks.md
.kiro/specs/sake-recommendation/: design.md  requirements.md  tasks.md
.kiro/specs/terraform-infrastructure/: design.md  requirements.md  tasks.md
.kiro/steering/: language.md  product.md  strands.md  structure.md  tech.md
agentcore/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README_INTEGRATION.md  pyproject.toml  run_local.sh  test_category_validation.py  test_local.py
agentcore/docs/: bedrock-models.md
agentcore/src/: __init__.py  agent.py
agentcore/src/agents/: __init__.py  sake_recommendation_agent.py
agentcore/src/models/: __init__.py  drinking_record.py  menu.py  recommendation.py
agentcore/src/services/: __init__.py  bedrock_service.py  drinking_record_service.py  recommendation_service.py
agentcore/src/utils/: __init__.py  config.py  logging.py
agentcore/tests/: test_models.py  test_recommendation_integration.py  test_recommendation_service.py
docs/: agent-core.md  api-doc.md  product.md
infrastructure/: .gitignore  Makefile  README.md  backend.tf  main.tf  outputs.tf  variables.tf
infrastructure/docs/: backend-setup-guide.md
infrastructure/modules/agentcore/: main.tf  (+2 more)
infrastructure/scripts/: cost-estimation.sh
nextjs/: API設計書.md  COLOR_SYSTEM.md  DESIGN_SYSTEM.md  Dockerfile  README.md  jest.config.js  package.json  pnpm-lock.yaml  仕様書.md
nextjs/docs/: api-implementation.md
(+63 files in other folders)
